# leopardybot

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml  clippy.yml  codecov.yml  test.yml
migration/src/: idens.rs  lib.rs  m20220101_000001_player.rs  m20221026_195744_question.rs  m20221030_183111_chat.rs  m20221030_193210_game.rs  m20221031_205134_poll.rs  m20221105_213042_user_poll_answer.rs  m20221113_203803_user_quiz.rs  m20221120_221515_quiz_explanation.rs
questions/: questions.csv
src/: api.rs  conf.rs  db.rs  error.rs  job.rs  lib.rs  main.rs  seeder.rs  server.rs  texts.rs
src/entities/: chat.rs  game.rs  mod.rs  player.rs  player_played_quiz.rs  player_poll_answer.rs  poll.rs  prelude.rs  question.rs  question_option.rs  quiz.rs  sea_orm_active_enums.rs
src/game/: base.rs  chat.rs  player.rs  player_played_quiz.rs  player_poll_answer.rs  poll.rs  question.rs  typings.rs
src/router/: base.rs  help.rs  play.rs  play_group.rs  play_single.rs  poll_answer.rs  restart.rs  start.rs
src/telebot/: client.rs  typings.rs
src/tests/: common.rs  help_command.rs
